# rpin

./: Cargo.toml
src/: main.rs
src/examples/: mod.rs
src/examples/godzilla/: mod.rs  playfield.rs
src/fast/: README.md  add_exp_led_port.rs  boot.rs  exp_led_port.rs  expansion_board.rs  fsp.rs  io.rs  io_board.rs  mod.rs  neutron.rs  parser.rs  resources.rs  serial.rs  system.rs  watchdog.rs
src/fast/led/: anim.rs  id_builder.rs  linear.rs  linear_gradient.rs  mod.rs
src/fast_pinball/: events.rs  expansion_board.rs  io_board.rs  mod.rs  neutron.rs  plugin.rs  prelude.rs  resources.rs  serial.rs  systems.rs
src/fast_pinball/commands/: color.rs  mod.rs  set_all_leds.rs  set_leds.rs
src/pinball/: base.rs  components.rs  debug.rs  global.rs  inputs.rs  keyboard.rs  mod.rs  payment.rs  simple_animation.rs
src/pinball/anim/: README.md  anim.rs  anim_sequence.rs  playback.rs  plugin.rs
src/pinball/anim/animations/: brightness.rs  curves.rs  flash.rs  mod.rs  settings.rs  solid.rs
src/pinball/dev_tools/: debug.rs  fake.rs  keyboard.rs  mod.rs
src/pinball/led_anim/: README.md  anim.rs  anim_sequence.rs  mod.rs  plugin.rs
src/pinball/led_anim/animations/: brightness.rs  mod.rs  settings.rs  solid.rs
src/pinball/led_anim/frame_builder/: curves.rs  lightness.rs  linear.rs  mod.rs  seq.rs  settings.rs  solid.rs
src/rgb_led/: animatable.rs  animation.rs  applicator.rs  curve.rs  flasher.rs  gradient.rs  led_sequence.rs  math.rs  mod.rs  plugin.rs  progress_animation.rs  sequence.rs  sketch.rs
src/rgb_led/examples/: animate_sequence.rs  basic.rs
