[package]
name = "bevy-pin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
colors-transform = "0.2.11"
serialport = "4.7.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[env]
WGPU_BACKEND = "vk"
